--- a/_posts/2019-04-29-MarkDown学习.md
+++ b/_posts/2019-04-29-MarkDown学习.md
@@ -1,8 +1,9 @@
 ---
 title: MarkDown学习
 date: 2019-04-29 18:30:23 +0800
-description: MarkDown语法学习
+description: MarkDown基本语法
 categories:
  - 编程语言
 tags:
 ---
+
